BGCAP-68 issue completed and modal scrollbar issue fixed (#77)
* Profile > Edit About Modal fix

Eliminated Scrollbar for the About modal textarea

* BGCAP-68

BGC Admin -Admin User Log Out issue completed

* fixes

--- a/src/pages/Signup/step4.css
+++ b/src/pages/Signup/step4.css
@@ -57,6 +57,19 @@
 .frms {
   margin-top: 10px;
 }
+
+.frms textarea{
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  min-height: 150px;
+  max-height: 250px;
+}
+
+.frms textarea::-webkit-scrollbar{
+  width: 0;
+  display: 0;
+}
+
 .step4__section_Month_mdw {
   margin: 0px 80px 10px 0px !important;
   min-width: 125px !important;
